tests/baselines/reference/unusedPrivateMethodInClass4.errors.txt
tests/cases/compiler/unusedPrivateMethodInClass4.ts(2,13): error TS6133: 'function1' is declared but its value is never read.
tests/cases/compiler/unusedPrivateMethodInClass4.ts(3,13): error TS6133: 'y' is declared but its value is never read.
tests/cases/compiler/unusedPrivateMethodInClass4.ts(8,13): error TS6133: 'y' is declared but its value is never read.
tests/cases/compiler/unusedPrivateMethodInClass4.ts(13,13): error TS6133: 'y' is declared but its value is never read.


==== tests/cases/compiler/unusedPrivateMethodInClass4.ts (4 errors) ====
    class greeter {
        private function1() {
                ~~~~~~~~~
!!! error TS6133: 'function1' is declared but its value is never read.
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
            y++;
        }
    
        private function2() {
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
            y++;
        }
    
        public function3() {
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
            y++;
            this.function2();
        }
    }